# archive-papers-embeddings

./: README.md  config.yml  first-trial.ipynb  pyproject.toml
src/: main.py
src/dataset/: cleaner.py  downloader.py  vect_db.py
src/model/: inference.py
src/utils/: utils.py  viz.py
