[project]
name = "embeddings-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.1",
    "cohere==5.20.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas==2.2.2",
    "python-dotenv==1.1.1",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
]
